Finished Part 1 Paragraph

--- a/module1/index.html
+++ b/module1/index.html
@@ -3,6 +3,14 @@
      <title> My BLog </title>
    </head>
    <body>
-      This is a line of text.
+    <p>
+       This is a line of text.
+     </p>
+     <p>
+       This is another paragraph.
+     </p>
+     <p>
+       This is <br /> a line break
+     </p>
    </body>
 </html>
