Finished Text Formatting

--- a/module1/index.html
+++ b/module1/index.html
@@ -4,13 +4,8 @@
    </head>
    <body>
     <p>
-       This is a line of text.
-     </p>
-     <p>
-       This is another paragraph.
-     </p>
-     <p>
-       This is <br /> a line break
+<strong> This is strong text </strong>
+<i> This is italacized text </i>
      </p>
    </body>
 </html>
