Finished Heading/comments.

--- a/module1/index.html
+++ b/module1/index.html
@@ -7,5 +7,6 @@
 <strong> This is strong text </strong>
 <i> This is italacized text </i>
      </p>
+     <!-- Your comment goes here -->
    </body>
 </html>
